# tech_practice

./: .dockerignore  .gitignore  Dockerfile  chroma.py  llm.py  main.py  memory.py  pyproject.toml
.github/workflows/: deploy.yml
texts/: accordion.md  accordiong.md  alertnt.md  alertntg.md  animation.md  animationg.md  autocomplete.md  autocompleteg.md  breadcrumbs.md  breadcrumbsg.md  button.md  buttong.md  carousels.md  carouselsg.md  cgraphics.md  cgraphicsg.md  checkbox.md  checkboxg.md  datepicker.md  datepickerg.md  decimg.md  decimgg.md  figure.md  figureg.md  footnote.md  footnoteg.md  heading.md  headingg.md  helphinterr.md  helphinterrg.md  iframe.md  iframeg.md  infimg.md  infimgg.md  link.md  linkg.md  list.md  listg.md  modald.md  modaldg.md  (+46 more)
